quick fix for talk alignment issues

--- a/website/static/website/css/talks.css
+++ b/website/static/website/css/talks.css
@@ -28,6 +28,7 @@
 	position:relative;
 	min-height: 300px;
 	float: left;
+	line-height: 1;
 }
 
 @media (max-width: 768px){
